XMLSerializer().serializeToString() doesn't generate the XML declaration markup like Opera and Firefox https://bugs.webkit.org/show_bug.cgi?id=83432

Reviewed by Ryosuke Niwa.

Source/WebCore:

Serialize the xml declaration exactly as parsed, if present in the document.

Test: fast/dom/dom-parse-serialize-xmldecl.html

* dom/Document.cpp:
(WebCore::Document::Document):
(WebCore::Document::setXMLStandalone): update xmlStandalone to either yes or no.
* dom/Document.h:
(WebCore::Document::xmlStandalone):
(WebCore::Document::xmlStandaloneStatus): xmlStandalone can be unspecified, yes or no.
(WebCore::Document::hasXMLDeclaration):  test if xml declaration is present.
(WebCore::Document::setHasXMLDeclaration):
(Document):
* editing/MarkupAccumulator.cpp:
(WebCore::MarkupAccumulator::appendXMLDeclaration): write xml declaration if present.
(WebCore):
(WebCore::MarkupAccumulator::appendStartMarkup):
* editing/MarkupAccumulator.h:
(MarkupAccumulator):
* xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::XMLDocumentParser::startDocument): call setHasXmlDeclaration and any declaration strings parsed.
* xml/parser/XMLDocumentParserQt.cpp:
(WebCore::XMLDocumentParser::startDocument): call setHasXmlDeclaration and any declaration strings parsed.

LayoutTests:

Verify that xml declaration gets serialized if present. The updated test results are improvements.

* fast/dom/dom-parse-serialize-display-expected.txt:
* fast/dom/dom-parse-serialize-expected.txt:
* fast/dom/dom-parse-serialize-xmldecl-expected.txt: Added.
* fast/dom/dom-parse-serialize-xmldecl.html: Added.
* fast/xmlhttprequest/xmlhttprequest-get-expected.txt:
* fast/xsl/xslt-processor-expected.txt:
* http/tests/xmlhttprequest/xml-encoding-expected.txt:
* platform/chromium-mac/fast/xmlhttprequest/xmlhttprequest-get-expected.txt:
* platform/chromium-win/fast/xmlhttprequest/xmlhttprequest-get-expected.txt:

Canonical link: https://commits.webkit.org/101346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114059 268f45cc-cd09-0410-ab3c-d52691b4dbfc